# deptyr

./: .gitignore  COPYING  Cargo.toml  Makefile  README.md  deptyr.c  deptyr.h  unix_socket.c  unix_socket.h
platform/: platform.h
platform/freebsd/: freebsd.c
platform/linux/: linux.c
src/: fd_io.rs  main.rs  tty.rs  unix_socket.rs
