[package]
name = "deptyr"
version = "0.1.0"
authors = ["Andreas Fuchs <asf@boinkor.net>"]

[dependencies]
nix = { git = "https://github.com/nix-rust/nix.git", rev = "1b80024f3a1a8188b98d458b8b332adb6fd7a038" }
clap = "2.31.2"
failure = "0.1.1"
failure_derive = "0.1.1"
sendfd = "0.1.0"
libc = "0.2.40"
owned-fd = "0.1.0"
ctrlc = {version = "3.1.0", features = ["termination"]}